force-app/main/default/objects/skilljar__Published_Course__c/skilljar__Published_Course__c.object-meta.xml
<CustomObject>
    <description>A course published to the Skilljar course platform.</description>
    <label>Published Course</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Published Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>