force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Course__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>skilljar__Course__c</referenceTo>
    <relationshipLabel>Published_Courses</relationshipLabel>
    <relationshipName>Published_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>