force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Course_Id__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course_Id__c</fullName>
    <description>Identifier of the course within Skilljar. This Id is the same even if the course is published to multiple domains.</description>
    <label>Course Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>