force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Course_Title__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course_Title__c</fullName>
    <label>Course Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>