force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Course_URL__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course_URL__c</fullName>
    <description>URL to the Course Detail Page</description>
    <label>Course URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>