force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Domain__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Domain__c</fullName>
    <label>Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>