force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Lesson_Count__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lesson_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of lessons in the course</description>
    <label>Lesson Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>