force-app/main/default/objects/skilljar__Published_Course__c/fields/skilljar__Live__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Live__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This flag is set to False once a course has been deleted, or unpublished.</description>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>