force-app/main/default/objects/skilljar__Published_Course__c/listViews/skilljar__All.listView-meta.xml
<ListView>
    <fullName>skilljar__All</fullName>
    <columns>skilljar__Course_Title__c</columns>
    <columns>skilljar__Domain__c</columns>
    <columns>skilljar__Course_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>skilljar__Live__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>